--- a/dnf/mysql/docker-compose.yml
+++ b/dnf/mysql/docker-compose.yml
@@ -6,4 +6,4 @@ services:
         environment: 
                 MYSQL_ROOT_PASSWORD: root
         ports: 
-            - "3306:3306"
+            - ${MYSQL_PORT}:3306
