--- a/dnf/mongo/docker-compose.yml
+++ b/dnf/mongo/docker-compose.yml
@@ -4,6 +4,6 @@ services:
         image: mongo:3.5.13
         restart: always
         ports:
-            - {MONGO_PORT}:27017"
+            - ${MONGO_PORT}:27017
         volumes:
             - ./db:/data/db
